Wed Dec 13 01:58:38 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add copy and assignment operators to OmMSet so that the internals
	  get copied (rather than just the pointer to them).  Really want a
	  small internals class, holding a refcount to the real internals, or
	  else to use refcntptrs for the members of OmMSet::Internal which are
	  potentially large (eg, items)

Wed Dec 13 01:05:44 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add Asserts to api/omdatabaseinternal.cc to ensure that there is at
	  least one database present when opening termlists, etc.  This should
	  really be done by throwing errors.

	* Add destructor to OmMSet, deleting internals.

	* Implement getting positionlists from QuartzDatabases.

	* Fix bug in copy constructor of OmDocument::Internal - some fields
	  were not being copied.

	* Fix api_db.cc so it compiles: code referring to mset by subscripting
	  temporarily commented out.

Tue Dec 12 20:05:10 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug with truncation of intermediate keys in btrees.

Tue Dec 12 18:33:12 GMT 2000 Olly Betts

	* OmMSet::get_docs() now takes sane parameters.

	* Various test programs updated to nearly work with new OmMSet
	  interface.

Tue Dec 12 17:18:33 GMT 2000 Olly Betts

	* Finished cleaning up OmMSet; updated TODO to reflect this.

Tue Dec 12 17:16:02 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug with sorting keys in btrees.

	* Various fixes to quartzdump.

Tue Dec 12 15:40:28 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Nettest compiles with new OmMSet interface.

Tue Dec 12 15:09:14 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed an endless loop in QuartzWritableDatabase::do_delete_document.

Tue Dec 12 15:07:39 GMT 2000 Olly Betts

	* OmMSetItem replaced by OmMSetIterator.

	* Added OmESet::empty().

	* Fixed == on OmESetIterator.
